--- a/static/css/sass/dcr.scss
+++ b/static/css/sass/dcr.scss
@@ -376,7 +376,9 @@ label.checkbox {
 }
 
 .iteminfo {
+  float: none;
   margin-top: 5px;
+  width: 100%;
 
   h2, p {
     font-size: inherit;
@@ -388,6 +390,7 @@ label.checkbox {
 }
 
 h2.iteminfo {
+  line-height: 30px;
   margin-bottom: 20px
 }
 
